cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Werror=uninitialized -Werror=return-type")


SET(TARGET utils)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/..)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

LINK_DIRECTORIES($ENV{BOOST_LIB_PATH})
SET(${TARGET}_SUBDIRS .)

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)

ADD_LIBRARY(${TARGET} SHARED ${${TARGET}_SRCLISTS})
TARGET_LINK_LIBRARIES(${TARGET} tcmalloc)


set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION $ENV{BUILD_VERSION})
#set_target_properties(${TARGET} PROPERTIES COTIRE_PREFIX_HEADER_IGNORE_PATH "boost/preprocessor")

INSTALL(TARGETS ${TARGET}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION bin
        )

add_subdirectory(test)
